# beer-color-prediction

./: README.md  a.ipynb  pyproject.toml
data/2_dropped/: not_amst.csv  readme.md
data/3_selected/: selected.csv
data/4_engineered/: engineered_features.csv
data/5_model_selection/: models.csv
data/5_selected_Kbest/: selected_Kbest.csv  selected_Kbest_.csv
data/6_model_selection/: models.csv  pivoted_models.csv
data/7_model_specific_data_sets/: dt_scaled.csv  gbt_scaled.csv  lasso_scaled.csv  test_with_outliers.csv  test_without_outliers.csv
data/dropped/: not_amst.csv  readme.md
data/dropped_nulls/: dropped_rows.csv
data/selected/: selected.csv
data/test/: test_data.csv
models/: dt.pkl  gbt.pkl  lasso.pkl  lgbm.pkl  lgbm.txt
models/n_features_test/: DecisionTreeRegressor_10.pkl  DecisionTreeRegressor_12.pkl  DecisionTreeRegressor_15.pkl  DecisionTreeRegressor_2.pkl  DecisionTreeRegressor_4.pkl  DecisionTreeRegressor_5.pkl  DecisionTreeRegressor_8.pkl  GradientBoostingRegressor_10.pkl  GradientBoostingRegressor_12.pkl  GradientBoostingRegressor_15.pkl  GradientBoostingRegressor_2.pkl  GradientBoostingRegressor_4.pkl  GradientBoostingRegressor_5.pkl  GradientBoostingRegressor_8.pkl  LGBMRegressor_10.pkl  LGBMRegressor_10.text  LGBMRegressor_12.pkl  LGBMRegressor_12.text  (+15 more)
notebooks/: 1_eda.ipynb  2_feature_engineering.ipynb  3_feature_and_model_selection.ipynb  3_feature_selection.ipynb  4_tuning.ipynb  5_results.ipynb  beer_color_prediction.ipynb  column_description.md  eda.ipynb  feature_selection.ipynb  lgbm.txt
src/: corr.py  load.py  norm.py
(+2 files in other folders)
